<resources>
    <string name="app_name">Cthulhu Companion</string>
    <string name="episode_title">Episode</string>
    <string name="navigate_to_mythos_phase">Mythosphase</string>
    <string name="navigate_to_next_player">Nächster Spieler</string>
    <string name="enemies_attack_reminder">Gegner greifen an</string>
    <string name="navigate_to_end_of_round">Zug beenden</string>
    <string name="drawn_investigation_card">Gezogene Ermittlerkarte</string>
    <string name="add_mythos_token_info">Es kommt (k)ein neuer Mythosmarker hinzu</string>
    <string name="secure_rest_reminder">Du befindest dich im Moment noch auf einem sicheren Feld \n und kannst ermitteln</string>
    <string name="navigate_to_investigate">Ermitteln</string>
    <string name="navigate_to_fight">Kämpfen</string>
    <string name="add_player">Füge Spieler hinzu</string>
    <string name="confirm_set_up">START</string>
    <string name="enemy_name">Name</string>
    <string name="enemy_location">location</string>
    <string name="initial_num_life_points_enemy">X</string>
    <string name="great_old_one_name">Great Old One</string>
    <string name="great_old_one_level">Stufe X</string>
    <string name="great_old_one_proceeds">Vorrücken:</string>
    <string name="great_old_one_proceeds_effect">Effekt</string>
    <string name="character_name">Spielername</string>
    <string name="player_location">Ort</string>
    <string name="initial_num_burn_tokens">X</string>
    <string name="initial_num_life_points_player">Y</string>
    <string name="initial_num_stress_level">Z</string>
    <string name="property_name">name</string>
    <string name="property_description">Beschreibung der Eigenschaft</string>
    <string name="rerolls">Neuwürfe:</string>
    <string name="attack_enemies_reminder">Du kannst 1+X Gegner auf deinem Feld angreifen</string>
    <string name="invalid_rest_reminder">Es befinden sich Gegner auf deinem Feld!</string>
    <string name="choose_action_reminder"><![CDATA[<— Wähle Aktion]]></string>
    <string name="episode_action_description">Beschreibung der Episodenaktion</string>
    <string name="add_burn_tokens_reminder">Füge ggf Brandmarker hinzu</string>
    <string name="on_move_enemy_follows_reminder">Gegner folgen dir:</string>
    <string name="rest_action_reminder">Du kannst 3+X Wunden/Stress heilen</string>
    <string name="trade_action_reminder">Du kannst Ermittlerkarten mit Mitspielern auf deinem Feld tauschen</string>
    <string name="investigation_card_name">Kartenname</string>
    <string name="remove">ENTFERNEN</string>
    <string name="todo">TODO</string>
    <string name="level_up">Aufleveln</string>
    <string name="character_description">Beschreibung des Charakters</string>
    <string name="summon">BESCHÖREN</string>
    <string name="choose_location">Wähle Ort</string>
    <string name="choose_character">Wähle Charakter:</string>
    <string name="self_name">Du:</string>
    <string name="player1_name">Spieler 1:</string>
    <string name="player2_name">Spieler 2:</string>
    <string name="player3_name">Spieler 3:</string>
    <string name="num_investigation_cards">X Ermittlerkarten</string>
    <string name="move_reminder">Du kannst dich 3+X Felder weit bewegen</string>
    <string name="choose_player_color">Wähle Spielerfarbe</string>
    <string name="choose_new_location">Wähle neuen Ort:</string>
    <string name="choose_enemy">Wähle Gegner</string>
    <string name="confirm">Bestätigen</string>
</resources>