<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright 2024, Julia Michaely, All rights reserved.
-->

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/move_description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/move_reminder" />

            <TextView
                android:id="@+id/burn_description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_burn_tokens_reminder" />

            <include layout="@layout/display_property" />
            <include layout="@layout/display_property" />
            <include layout="@layout/display_player_info_mutable"/>

            <TextView
                android:id="@+id/enemies_follow_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/on_move_enemy_follows_reminder" />

            <include layout="@layout/display_property"/>
            <include layout="@layout/display_property"/>
            <!-- use mutable items -->
            <include layout="@layout/list_enemy_immutable" />
        </LinearLayout>
    </ScrollView>