<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright 2024, Julia Michaely, All rights reserved.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sanity_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:itemCount="1">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/player_info_immutable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/character_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@android:drawable/btn_star"
            android:contentDescription="@null" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/character_name" />

            <TextView
                android:id="@+id/player_location_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_location" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/material_dynamic_neutral40"
                    app:srcCompat="?attr/actionModeCopyDrawable"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/card_count_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/num_investigation_cards" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/burn_token_immutable_img"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        tools:src="@tools:sample/avatars"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/burn_token_immutable_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/initial_num_burn_tokens" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/life_points_player_immmutable_img"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:scaleType="fitCenter"
                        tools:src="@tools:sample/avatars"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/life_points_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/initial_num_life_points_player" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/stresslevel_immutable_img"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        tools:src="@tools:sample/avatars"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/stresslevel_immutable_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/initial_num_stress_level" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    tools:ignore="UselessLeaf">

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>