<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright 2024, Julia Michaely, All rights reserved.
-->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_info_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/great_old_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/great_old_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/great_old_one_name"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/great_old_level_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/great_old_one_level" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/great_old_progression_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mystery_token1_img"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                tools:ignore="NestedWeights"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/mystery_token2_img"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                tools:srcCompat="@tools:sample/avatars"  />

            <ImageView
                android:id="@+id/mystery_token3_img"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                tools:srcCompat="@tools:sample/avatars" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/progression_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:itemCount="1"> <!--- WARNING: delete when implementing recyclerview  -->


                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/proceed_immutable_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/great_old_one_proceeds"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/proceed_effect_immutable_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/great_old_one_proceeds_effect" />
            </LinearLayout>

        </LinearLayout>

        <!-- LONGPRESS: display ability to change order using left/right arrow icons on each item -->

    </LinearLayout>
</merge>