<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright 2024, Julia Michaely, All rights reserved.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/element_all_players_info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <!-- oncklick -> popup_episode_info -->
    <TextView
        android:id="@+id/episode_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/episode_title" />

    <include layout="@layout/display_great_old_info_immutable"/>
    <include layout="@layout/list_enemy_immutable"/>

    <include layout="@layout/display_player_info_immutable" />

    <TextView
        android:id="@+id/attack_info_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enemies_attack_reminder" />

    <include layout="@layout/list_enemy_immutable" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- clicking on an enemy will display the appropriate content down below -->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dice_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:itemCount="1" />

            <include layout="@layout/display_property" />
            <include layout="@layout/display_property" />
            <include layout="@layout/display_player_info_mutable" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- onpress: mark the appropriate enemy in the list as done -->

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/confirm_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:src="?android:attr/textCheckMark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:contentDescription="@null"
                    android:focusable="true" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/fight_finish_round_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navigate_to_end_of_round" />
    <!-- -> Mythosphase -> Ermitteln/Angreifen -> Ende des Zuges -> nächster Spieler -->

</LinearLayout>